add ask config file

--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LaLabSkillBuilder",
+  "name": "LaLabSkill-Builder",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
