fixed package.json name to remove warning

--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LaLabSkill-Builder",
+  "name": "lalabskillbuilder",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
